--- a/Convertly/App.xaml
+++ b/Convertly/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="/Views/Styles/ListViewStyle.xaml"/>
                 <ResourceDictionary Source="/Views/Styles/TextBoxStyle.xaml"/>
                 <ResourceDictionary Source="/Views/Styles/TabControlStyle.xaml"/>
+                <ResourceDictionary Source="/Views/Styles/CheckBoxStyle.xaml"/>
                 
             </ResourceDictionary.MergedDictionaries>
 
