--- a/Convertly/Views/Styles/CheckBoxStyle.xaml
+++ b/Convertly/Views/Styles/CheckBoxStyle.xaml
@@ -1,10 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="LableStyle" TargetType="Label">
-        <Setter Property="FontSize" Value="15"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Style x:Key="SettingCheckBoxStyle" TargetType="CheckBox">
         <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0, 0, 0, 10"/>
     </Style>
     
 </ResourceDictionary>
