--- a/Convertly/Views/Styles/TabControlStyle.xaml
+++ b/Convertly/Views/Styles/TabControlStyle.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="TabControleMainStyle" TargetType="TabControl">
-        <Setter Property="Background" Value="LightGray"/>
+        <Setter Property="Background" Value="#FF282C34"/>
+        <Setter Property="BorderBrush" Value="#FF282C34"/>
     </Style>
     
 </ResourceDictionary>
