--- a/Convertly/Views/Styles/TextBoxStyle.xaml
+++ b/Convertly/Views/Styles/TextBoxStyle.xaml
@@ -1,4 +1,43 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <Style x:Key="SettingTextBoxStyle" TargetType="TextBox">
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Width" Value="auto"/>
+        <Setter Property="FontSize" Value="25"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="CaretBrush" Value="White"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+    </Style>
+
+    <ControlTemplate x:Key="SettingTextBoxControleTemplate" TargetType="TextBox">
+        
+        <Border x:Name="border" BorderBrush="White"
+                BorderThickness="2" Background="#FF595958"
+                SnapsToDevicePixels="True">
+
+            <ScrollViewer x:Name="PART_ContentHost" Focusable="False" Foreground="White" 
+                          HorizontalScrollBarVisibility="Hidden" 
+                          VerticalScrollBarVisibility="Hidden"/>
+
+        </Border>
+
+        
+        <ControlTemplate.Triggers>
+            
+            <Trigger Property="IsFocused" Value="True">
+                <Setter TargetName="border" Property="Background" Value="#727271"/>
+                <Setter TargetName="border" Property="BorderBrush" Value="LightBlue"/>
+            </Trigger>
+
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter TargetName="border" Property="Background" Value="#727271"/>
+                <Setter TargetName="border" Property="BorderBrush" Value="LightBlue"/>
+            </Trigger>
+            
+        </ControlTemplate.Triggers>
+        
+    </ControlTemplate>
     
 </ResourceDictionary>
