Добавлен функционал кнопки "Конвертация и сохранение", которая конвертирует весь список и сохраняет все находящиеся в нем изображения

--- a/Convertly/App.xaml
+++ b/Convertly/App.xaml
@@ -16,6 +16,8 @@
                 <ResourceDictionary Source="/Views/Styles/TextBoxStyle.xaml"/>
                 <ResourceDictionary Source="/Views/Styles/TabControlStyle.xaml"/>
                 <ResourceDictionary Source="/Views/Styles/CheckBoxStyle.xaml"/>
+                <ResourceDictionary Source="/Views/Styles/ComboBoxStyle.xaml"/>
+                <ResourceDictionary Source="/Views/Styles/ScrollViewerStyle.xaml"/>
                 
             </ResourceDictionary.MergedDictionaries>
 
